--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 ---
-layout: post-index
+layout: post-first
 title: Yujin`s Blog 
 description: "배운 것을 정리하는 블로그"
 comments: false
 image:
-  feature: Cover.jpg
+  feature: background/Computer/4.jpg
 ---
+<article class="hentry">
+  <h2>Category</h2>
+  <ul class="entry-meta inline-list">
+    <li><a href="{{ site.url }}/tags/#C" class="tag"><span class="term">C</span></a></li>	
+    <li><a href="{{ site.url }}/tags/#C++" class="tag"><span class="term">C++</span></a></li>	
+    <li><a href="{{ site.url }}/tags/#Compiler" class="tag"><span class="term">Compiler</span></a></li>	
+    <li><a href="{{ site.url }}/tags/#Computer Graphics" class="tag"><span class="term">Computer Graphics</span></a></li>	
+    <li><a href="{{ site.url }}/tags/#Tips" class="tag"><span class="term">Tips</span></a></li>	
+    <li><a href="{{ site.url }}/tags/#VR" class="tag"><span class="term">VR</span></a></li>	
+    <li><a href="{{ site.url }}/tags/#Writing" class="tag"><span class="term">좋은 글</span></a></li>	
+  </ul>
+</article>
+<!--
+<article class="hentry">
+  <h2>Tags</h2>
+  {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+  {% assign tags_list = site_tags | split:',' | sort %}
 
-{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-{% assign tags_list = site_tags | split:',' | sort %}
-
-<ul class="entry-meta inline-list">
-  {% for item in (0..site.tags.size) %}{% unless forloop.last %}
-    {% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
-  	<li><a href="{{ site.url }}/tags/#{{ this_word }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.tags[this_word].size }}</span></a></li>
-  {% endunless %}{% endfor %}
-</ul>
-
+  <ul class="entry-meta inline-list">
+    {% for item in (0..site.tags.size) %}{% unless forloop.last %}
+      {% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
+      <li><a href="{{ site.url }}/tags/#{{ this_word }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.tags[this_word].size }}</span></a></li>
+    {% endunless %}{% endfor %}
+  </ul>
+</article>-->
 {% for post in paginator.posts %}
 <article class="hentry">
   <header>
