--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@ image:
 <article class="hentry">
   <h2>Category</h2>
 
-  {% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
-  {% assign tags_list = site_tags | split:',' | sort %}
+  {% capture site_categories %}
+    {% for tag in site.categories %}
+    {{ tag | first }}
+    {% unless forloop.last %},{% endunless %}
+    {% endfor %}
+  {% endcapture %}
+  {% assign categories_list = site_categories | split:',' | sort %}
 
   <ul class="entry-meta inline-list">
-    {% for item in (0..site.tags.size) %}{% unless forloop.last %}
-      {% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
-      <li><a href="{{ site.url }}/tags/#{{ this_word }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.tags[this_word].size }}</span></a></li>
+    {% for item in (0..site.categories.size) %}{% unless forloop.last %}
+      {% capture this_word %}{{ categories_list[item] | strip_newlines }}{% endcapture %}
+      <li><a href="{{ site.url }}/tags/#{{ this_word }}" class="tag"><span class="term">{{ this_word }}</span> <span class="count">{{ site.categories[this_word].size }}</span></a></li>
     {% endunless %}{% endfor %}
   </ul>
 </article>
